ie 11 flex-basis fix

--- a/style/index.styl
+++ b/style/index.styl
@@ -45,7 +45,7 @@ datagrid-cell()
         position relative
         display flex
         flex-flow column
-        flex-basis: auto;
+        flex-basis: auto
 
         .z-wrapper
             display flex
